project almost completed just responsive code need to add

--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@
             <div class="image">
                 
             </div>
+
+            <div class="black_circle">
+                <h3>add to bag</h3>
+            </div>
+
+            <h2 class="rotted_text"> Cotton twill cap </h2>
+
+
         </div>
     </div>
 </body>
